--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="w3.css">
+        <link rel="manifest" href="manifest.json">
     </head>
     <body>
         <div class="w3-row">
@@ -92,5 +93,24 @@
             </div>
         </div>
         <script src="fig.js"></script>
+        <script>
+            if('serviceWorker' in navigator){
+                navigator.serviceWorker.register('sw.js')
+                .then(
+                    function(registration)
+                    {
+                        alert('Reg. satisfactorio del sw');
+                        console.log('Reg. satisfactorio del sw en el ámbito: ',
+                        registration.scope);
+                    }
+                ).catch(
+                    function(err)
+                    {
+                        alert('El SW no se registró');
+                        console.log('El SW no se registró', err);
+                    }
+                );
+            }
+        </script>
     </body>
 </html>
