--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="w3.css">
-        <link rel="manifest" href="manifest.json">
+        <link rel="manifest" href="manifiesto.json">
     </head>
     <body>
         <div class="w3-row">
