--- a/index.html
+++ b/index.html
@@ -92,20 +92,19 @@
                 </div>
             </div>
         </div>
-        <script src="fig.js"></script>
+        <script rc="fig.js"></script>
+        
         <script>
             if('serviceWorker' in navigator){
                 navigator.serviceWorker.register('sw.js')
                 .then(
-                    function(registration)
-                    {
+                    function(registration){
                         alert('Reg. satisfactorio del sw');
                         console.log('Reg. satisfactorio del sw en el ámbito: ',
-                        registration.scope);
+                                    registration.scope);
                     }
                 ).catch(
-                    function(err)
-                    {
+                    function(err){
                         alert('El SW no se registró');
                         console.log('El SW no se registró', err);
                     }
