--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
                 </div>
             </div>
         </div>
-        <script rc="fig.js"></script>
-        
+        <script src="fig.js"></script>
+
         <script>
             if('serviceWorker' in navigator){
                 navigator.serviceWorker.register('sw.js')
