--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
                 ></canvas>
                 <canvas 
                     id="lienzo"
+                    style=" position:absolute"
                     width="1070"
                     height="550"
                 ></canvas>
